prusti-tests/tests/verify_overflow/fail/overflow/div_isize.rs
fn test(x: isize, y: isize) -> isize {
    x / y //~ ERROR
}

fn main() {}
